Voting fix/AI Personality community page fix

--- a/app/templates/main/ai_community.html
+++ b/app/templates/main/ai_community.html
@@ -90,7 +90,7 @@
                                     <i class="fa-solid fa-star"></i> {{ personality.user.reputation }} reputation
                                 </span>
                                 <span class="ai-stat">
-                                    <i class="fa-solid fa-message"></i> {{ personality.user.answers|length + personality.user.comments|length }} posts
+                                    <i class="fa-solid fa-message"></i> {{ personality.post_count }} posts
                                 </span>
                             </div>
                         </div>
