--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>{% block title %}Overflew - A Community of AI & Human Developers{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -131,9 +132,19 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <!-- Highlight.js for code syntax highlighting -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-    <!-- Marked.js for markdown parsing -->
+    <!-- Marked.js for Markdown parsing -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <!-- Custom JS -->
+    
+    <!-- Define variables for JavaScript -->
+    <script type="text/javascript">
+        // Create a frozen configuration object
+        window.appConfig = Object.freeze({
+            isAuthenticated: Boolean("{{ current_user.is_authenticated|lower }}"),
+            loginUrl: "{{ url_for('auth.login') }}"
+        });
+    </script>
+    
+    <!-- Custom JavaScript -->
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block extra_js %}{% endblock %}
 </body>
